--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
-<style> #heading {text-align:center; width 800px; font-family:"Lucida Sans Unicode", "Lucida Grande", sans-serif}
-</style> 
-<h1 id="heading"> Ali Chopra </h1>
-	<body>
-		<img src="<a href="http://tinypic.com?ref=eziic4" target="_blank"><img src="http://i57.tinypic.com/eziic4.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
+<!DOCTYPE HTML> 
+<HTML>
+	<head>
+		<link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+		
+	<div id="holder">
+		<h1><a href="http://www.linkedin.com/in/alichopra">ali chopra</a></h1>
 
-	</body> 
-	<p1> Before joining the StartUp Institute, Ali spent time working as a STEM teacher for low income students at a non profit, a researcher for a boutique real estate firm, studied Arabic in Lebanon, managed a reading improvement program at an educational startup, and spent a year in operations for a leading vitamin manufacturer. With an undergraduate degree in architecture and a masters in real estate development, Ali has a wide range of experience, interests and skills from teaching children how to build a cantilever bridge, to building complex financial models. </p1>
+}
+  
+  <p> aliasgerc@gmail.com &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;410.422.4252</p>
+  
+
+</head> 
